force-app/main/default/objects/FSL_Error_Alert__e/FSL_Error_Alert__e.object-meta.xml
<CustomObject>
    <description>Used to save records to the Error_Log__c object. (PVFSL-200)</description>
    <label>FSL Error Alert</label>
    <pluralLabel>FSL Error Alerts</pluralLabel>
</CustomObject>