force-app/main/default/objects/FSL_Error_Alert__e/fields/Component__c.field-meta.xml
<CustomField>
    <fullName>Component__c</fullName>
    <description>Name of the apex class or lightning web component in which the error occurred. (PVFSL-200)</description>
    <label>Component</label>
    <length>255</length>
    <type>Text</type>
</CustomField>