force-app/main/default/objects/FSL_Error_Alert__e/fields/Error__c.field-meta.xml
<CustomField>
    <fullName>Error__c</fullName>
    <description>If internal, this is the error message from the exception + the line number, if API call, then it is the response. (PVFSL-200)</description>
    <label>Error</label>
    <length>130000</length>
    <type>LongTextArea</type>
</CustomField>