force-app/main/default/objects/FSL_Error_Alert__e/fields/Provider__c.field-meta.xml
<CustomField>
    <fullName>Provider__c</fullName>
    <description>Provider selected by the user in Chuzo. Leave empty if not applicable. (PVFSL-200)</description>
    <label>Provider</label>
    <length>255</length>
    <type>Text</type>
</CustomField>