force-app/main/default/objects/FSL_Error_Alert__e/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>Determines if the error is coming from an API or if it is internal. (PVFSL-200)</description>
    <label>Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>